--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,64 +3,73 @@
     <string name="app_name">Cebolão Lotofácil</string>
 
     <string name="studio_name">Cebola Studios</string>
-    <string name="studio_slogan">Apps simples, honestos e diretos.</string>
+    <string name="studio_slogan">Apps simples, honestos e diretos ao ponto.</string>
 
-    <string name="error_analysis_failed">Falha ao analisar o jogo.</string>
-    <string name="error_load_data_failed">Não foi possível carregar os dados. Verifique sua conexão e tente novamente.</string>
-    <string name="general_loading_analysis">Analisando jogo…</string>
-    <string name="general_analysis_failed_snackbar">Falha na análise</string>
-    <string name="general_copied_to_clipboard">Copiado para área de transferência</string>
+    <string name="error_analysis_failed">Ops, falha ao analisar o jogo. Tente novamente.</string>
+    <string name="error_load_data_failed">Não foi possível carregar os dados. Sua conexão com a sorte (e a internet) está ativa?</string>
+    <string name="general_loading_analysis">Analisando o potencial do seu jogo…</string>
+    <string name="general_analysis_failed_snackbar">Falha na análise. A sorte é tímida às vezes.</string>
+    <string name="general_copied_to_clipboard">Copiado para a área de transferência!</string>
     <string name="general_cancel">Cancelar</string>
     <string name="general_close">Fechar</string>
     <string name="general_loading">Carregando…</string>
     <string name="general_retry">Tentar Novamente</string>
     <string name="general_failed_to_load_data">Falha ao Carregar Dados</string>
     <string name="general_info_icon_description">Ícone de informação</string>
+    <string name="general_error_title">Ocorreu um Erro</string>
 
     <string name="onboarding_skip">Pular</string>
     <string name="onboarding_next">Próximo</string>
     <string name="onboarding_start">Começar</string>
 
     <string name="home_title">Cebolão</string>
-    <string name="home_subtitle">Lotofácil Generator</string>
-    <string name="home_sync_button_description">Atualizar histórico</string>
+    <string name="home_subtitle">Sua Sorte, mais Inteligente</string>
+    <string name="home_sync_button_description">Atualizar dados</string>
     <string name="home_last_contest_format">Último Concurso: #%1$d</string>
+    <string name="home_next_contest">Próximo Concurso #%1$d</string>
+    <string name="home_prize_estimate">Prêmio Estimado</string>
+    <string name="home_accumulated_prize_final_five">Acumulado Final 0 ou 5</string>
+    <string name="home_special_prize_info">Prêmio especial</string>
     <string name="home_statistics_center">Central de Estatísticas</string>
     <string name="home_analysis_period">Período de Análise</string>
     <string name="home_all_contests">Todos</string>
     <string name="home_last_contests_format">Últimos %1$d</string>
-    <string name="home_hot_numbers">Dezenas Mais Sorteadas</string>
-    <string name="home_overdue_numbers">Dezenas Mais Atrasadas</string>
+    <string name="home_hot_numbers">Dezenas Quentes (as mais sorteadas)</string>
+    <string name="home_overdue_numbers">Dezenas Atrasadas (as que devem uma visita)</string>
     <string name="home_suffix_times">x</string>
     <string name="home_suffix_ago"> atrás</string>
     <string name="home_understanding_stats">Entendendo as Estatísticas</string>
-    <string name="home_overdue_hot_numbers_desc"><![CDATA[<b>• Dezenas Atrasadas/Sorteadas:</b> Mostram os 5 números mais \'frios\' (sem sair) e \'quentes\' (mais frequentes). O valor abaixo indica o atraso (em concursos) ou a frequência total.]]></string>
-    <string name="home_distribution_charts_desc"><![CDATA[<b>• Gráficos de Distribuição:</b> A barra mais alta indica a ocorrência mais comum de um padrão (ex: 8 números pares). Use os filtros acima do gráfico para explorar diferentes estatísticas.]]></string>
-    <string name="home_sync_success_message">Histórico atualizado com sucesso!</string>
-    <string name="home_sync_failed_message">Não foi possível atualizar. Exibindo dados locais.</string>
+    <string name="home_overdue_hot_numbers_desc"><![CDATA[<b>• Dezenas Atrasadas/Quentes:</b> Mostra os 5 números mais \'frios\' (sem sair há tempos) e os \'quentes\' (frequentes). O valor abaixo indica o atraso (em concursos) ou a frequência total.]]></string>
+    <string name="home_distribution_charts_desc"><![CDATA[<b>• Gráficos de Distribuição:</b> A barra mais alta indica o padrão mais comum (ex: 8 números pares). Use os filtros acima do gráfico para explorar diferentes estatísticas e encontrar sua estratégia.]]></string>
+    <string name="home_sync_success_message">Dados atualizados com sucesso!</string>
+    <string name="home_sync_failed_message">Não foi possível atualizar. Mostrando os dados locais, sem pânico!</string>
+    <string name="home_winners_last_contest">Ganhadores do Último Concurso</string>
+    <string name="home_hits_format">%1$d acertos</string>
+    <string name="home_winner_count_one">%1$d ganhador</string>
+    <string name="home_winner_count_other">%1$d ganhadores</string>
 
     <string name="filters_title">Gerador Inteligente</string>
-    <string name="filters_subtitle">Refine a sorte com base em estatísticas</string>
+    <string name="filters_subtitle">Refine a sorte com base em dados</string>
     <string name="filters_reset_button_description">Resetar filtros</string>
     <string name="filters_reset_dialog_title">Resetar Filtros?</string>
-    <string name="filters_reset_dialog_message">Isso desativará todos os filtros e restaurará os padrões. Deseja continuar?</string>
+    <string name="filters_reset_dialog_message">Isso desativa todos os filtros e restaura os padrões. Certeza que quer começar do zero?</string>
     <string name="filters_reset_confirm">Resetar</string>
     <string name="filters_info_dialog_title_format">Filtro: %1$s</string>
     <string name="filters_button_generate">Gerar Jogos</string>
     <string name="filters_button_generating_progress">%1$d/%2$d</string>
     <string name="filters_button_cancel_description">Cancelar geração</string>
-    <string name="filters_quantity_decrease">Diminuir</string>
-    <string name="filters_quantity_increase">Aumentar</string>
+    <string name="filters_quantity_decrease">Diminuir quantidade de jogos</string>
+    <string name="filters_quantity_increase">Aumentar quantidade de jogos</string>
 
     <string name="games_title">Meus Jogos</string>
-    <string name="games_subtitle">Visualize, analise e gerencie seus jogos</string>
+    <string name="games_subtitle">Visualize, analise e gerencie suas apostas</string>
     <string name="games_export_button_description">Exportar jogos</string>
     <string name="games_import_button_description">Importar jogos</string>
     <string name="games_clear_unpinned_button_description">Limpar jogos não fixados</string>
     <string name="games_clear_dialog_title">Limpar Jogos?</string>
-    <string name="games_clear_dialog_message">Isso removerá todos os jogos não fixados. Deseja continuar?</string>
+    <string name="games_clear_dialog_message">Isso removerá todos os jogos que não estão fixados. Ação sem volta!</string>
     <string name="games_delete_dialog_title">Excluir Jogo?</string>
-    <string name="games_delete_dialog_message">Esta ação é permanente. Deseja excluir este jogo?</string>
+    <string name="games_delete_dialog_message">Esta ação é permanente. Tem certeza que quer apagar este jogo?</string>
     <string name="games_delete_confirm">Excluir</string>
     <string name="games_pin_game_description">Fixar jogo</string>
     <string name="games_unpin_game_description">Desafixar jogo</string>
@@ -69,73 +78,73 @@
     <string name="games_analyze_button">Analisar</string>
     <string name="games_check_button">Conferir</string>
     <string name="games_analysis_dialog_title">Análise do Jogo</string>
-    <string name="games_empty_state_title">Nenhum jogo gerado ainda</string>
-    <string name="games_empty_state_description">Use o Gerador Inteligente para criar combinações com seus filtros.</string>
+    <string name="games_empty_state_title">Nenhum jogo por aqui ainda</string>
+    <string name="games_empty_state_description">Vá para o Gerador Inteligente e crie suas primeiras combinações. A sorte favorece quem se prepara!</string>
     <string name="games_export_dialog_title">Exportar Jogos</string>
     <string name="games_export_dialog_share_button">Compartilhar</string>
     <string name="games_export_dialog_copy_button">Copiar</string>
     <string name="games_share_chooser_title">Compartilhar jogos</string>
     <string name="games_import_dialog_title">Importar Jogos</string>
-    <string name="games_import_dialog_message">Cole o texto exportado (cada jogo em uma linha) e confirme para importar.</string>
+    <string name="games_import_dialog_message">Cole aqui os jogos exportados (um por linha) e deixe a mágica acontecer.</string>
     <string name="games_import_dialog_textfield_label">Texto de importação</string>
     <string name="games_import_dialog_confirm_button">Importar</string>
-    <string name="games_import_success_message">Importados %1$d jogos</string>
-    <string name="games_import_fail_message">Nenhum jogo válido encontrado</string>
+    <string name="games_import_success_message">Importados %1$d jogos. Boa sorte!</string>
+    <string name="games_import_fail_message">Não encontrei nenhum jogo válido no texto. Verifique o formato.</string>
+    <string name="games_clear_confirm">Limpar</string>
 
     <string name="checker_title">Conferidor</string>
-    <string name="checker_subtitle">Teste seu jogo contra a história</string>
-    <string name="checker_progress_format">%1$d de %2$d números</string>
+    <string name="checker_subtitle">Teste sua sorte contra a história</string>
+    <string name="checker_progress_format">%1$d de 15 números selecionados</string>
     <string name="checker_clear_button_description">Limpar seleção</string>
     <string name="checker_save_button_description">Salvar jogo</string>
-    <string name="checker_check_button">Conferir</string>
-    <string name="checker_save_success_message">Jogo salvo com sucesso!</string>
-    <string name="checker_save_fail_message">Selecione 15 números para salvar.</string>
-    <string name="checker_results_header_wins">Premiações já ocorridas</string>
+    <string name="checker_check_button">Conferir Jogo</string>
+    <string name="checker_save_success_message">Jogo salvo! Que ele traga bons resultados.</string>
+    <string name="checker_save_fail_message">Para salvar, você precisa de 15 números. Quase lá!</string>
+    <string name="checker_results_header_wins">Histórico de Premiações</string>
     <string name="checker_results_header_no_wins">Análise de Desempenho</string>
     <string name="checker_results_analysis_in_contests">Análise em %1$d concursos</string>
     <string name="checker_score_breakdown_hits_format">%1$d Acertos</string>
     <string name="checker_score_breakdown_times_format_one">vez</string>
     <string name="checker_score_breakdown_times_format_other">vezes</string>
-    <string name="checker_last_hit_info">Último prêmio no concurso %1$s com %2$s acertos.</string>
-    <string name="checker_no_wins_message">Nenhum prêmio encontrado.</string>
+    <string name="checker_last_hit_info">Último prêmio no concurso #%1$s com %2$s acertos.</string>
+    <string name="checker_no_wins_message">Este jogo nunca foi premiado. Que tal ser o primeiro?</string>
     <string name="checker_simple_stats_title">Estatísticas do Jogo</string>
     <string name="checker_recent_hits_chart_title">Acertos nos Últimos 15 Sorteios</string>
+    <string name="checker_incomplete_game_message">Faltam números! Selecione 15 dezenas para conferir.</string>
 
-    <string name="share_game_subject">Jogo da Lotofácil Sugerido</string>
-    <string name="share_game_message_template"><![CDATA[Gerei este jogo da Lotofácil com o app Cebolão Generator! Se você ganhar, lembra de pagar aquele café… 😉\n\n<b>%1$s</b>]]></string>
+    <string name="share_game_subject">Um jogo da Lotofácil para você!</string>
+    <string name="share_game_message_template"><![CDATA[Gerei este jogo da Lotofácil com o app Cebolão Generator! Se ganhar, não esquece dos amigos... 😉\n\n<b>%1$s</b>]]></string>
 
     <string name="about_title">Sobre e Ajuda</string>
     <string name="about_subtitle">Informações, regras e configurações</string>
-    <string name="about_purpose_desc_body">Este app ajuda você a entender padrões estatísticos da Lotofácil, explorar filtros e visualizar combinações. Ele não promete acertos — serve para estudo, organização e diversão.</string>
-    <string name="about_purpose_desc_footer">Importante: loterias são jogos de azar. Use com responsabilidade.</string>
+    <string name="about_purpose_desc_body">Este app é uma ferramenta de estudo para a Lotofácil. Ele ajuda a entender padrões, explorar filtros e visualizar combinações. Ele não promete acertos — afinal, é um jogo de azar!</string>
+    <string name="about_purpose_desc_footer">Importante: loterias são jogos de sorte. Jogue com responsabilidade.</string>
 
     <string name="about_purpose_item1_title"><![CDATA[<b>Explorar padrões</b>]]></string>
-    <string name="about_purpose_item1_desc">Veja frequências, atrasos e distribuições sem precisar montar planilhas.</string>
+    <string name="about_purpose_item1_desc">Veja frequências e atrasos sem precisar de planilhas complicadas.</string>
     <string name="about_purpose_item2_title"><![CDATA[<b>Filtrar combinações</b>]]></string>
-    <string name="about_purpose_item2_desc">Aplique filtros matemáticos e posicionais para refinar jogos conforme sua estratégia pessoal.</string>
+    <string name="about_purpose_item2_desc">Use a matemática a seu favor para refinar jogos com sua estratégia.</string>
     <string name="about_purpose_item3_title"><![CDATA[<b>Organizar seus jogos</b>]]></string>
-    <string name="about_purpose_item3_desc">Fixe, exporte e importe jogos com facilidade para compartilhar com amigos e bolões.</string>
+    <string name="about_purpose_item3_desc">Salve, fixe e exporte jogos com facilidade para seus amigos e bolões.</string>
 
-    <string name="about_legal_item1">Este app não é afiliado à Caixa Econômica Federal ou a qualquer órgão oficial.</string>
-    <string name="about_legal_item2">Resultados e estatísticas podem conter imprecisões. Use por sua conta e risco.</string>
-    <string name="about_legal_item3">Não há garantia de ganho, retorno financeiro ou previsões.</string>
-    <string name="about_legal_footer"><![CDATA[<b>Isenção de responsabilidade:</b> informações fornecidas são educativas e não constituem aconselhamento financeiro.]]></string>
+    <string name="about_legal_item1">Este app não possui vínculo com a Caixa Econômica Federal.</string>
+    <string name="about_legal_item2">Resultados e estatísticas são para fins de estudo. Sempre confira o bilhete oficial.</string>
+    <string name="about_legal_item3">Não há nenhuma garantia de ganho ou previsão de resultados.</string>
+    <string name="about_legal_footer"><![CDATA[<b>Isenção de responsabilidade:</b> as informações são educativas e não são um conselho de investimento.]]></string>
 
-    <string name="about_privacy_desc_body"><![CDATA[O app prioriza <b>simplicidade</b> e <b>privacidade</b>. Não coletamos dados pessoais sensíveis; preferimos armazenar informações no seu dispositivo.]]></string>
-    <string name="about_privacy_item1">Sem cadastro, sem rastreamento entre apps.</string>
-    <string name="about_privacy_item2">Preferências salvas localmente via DataStore.</string>
-    <string name="about_privacy_item3">Conexões de rede usam HTTPS sempre que possível.</string>
+    <string name="about_privacy_desc_body"><![CDATA[Sua privacidade é prioridade. O app não coleta dados pessoais; tudo fica salvo apenas no seu dispositivo. Simples assim.]]></string>
+    <string name="about_privacy_item1">Sem cadastros, sem rastreamento.</string>
+    <string name="about_privacy_item2">Preferências salvas localmente no seu aparelho.</string>
+    <string name="about_privacy_item3">A conexão de rede é segura (HTTPS) para buscar os resultados.</string>
 
-    <string name="about_rules_item1">Você escolhe 15 números entre 25.</string>
-    <string name="about_rules_item2">Prêmios a partir de 11 acertos (11, 12, 13, 14 e 15).</string>
-    <string name="about_rules_item3">Sorteios ocorrem regularmente; confira sempre canais oficiais.</string>
+    <string name="about_rules_item1">Você escolhe 15 números de um total de 25.</string>
+    <string name="about_rules_item2">Prêmios para 11, 12, 13, 14 e 15 acertos.</string>
+    <string name="about_rules_item3">Sorteios ocorrem regularmente. Fique de olho nos canais oficiais.</string>
 
-    <string name="about_bolao_desc_body">Participar de bolões permite cobrir mais combinações dividindo custos e prêmios. É uma forma social de jogar com responsabilidade.</string>
-    <string name="about_bolao_desc_footer"><![CDATA[<i>Dica:</i> defina regras claras de participação e divisão antes de apostar.]]></string>
+    <string name="about_bolao_desc_body">Participar de bolões é uma forma inteligente de aumentar as chances, cobrindo mais combinações e dividindo os custos (e os prêmios!).</string>
+    <string name="about_bolao_desc_footer"><![CDATA[<i>Dica de amigo:</i> combine as regras de participação e divisão do prêmio antes de jogar.]]></string>
 
-    <string name="widget_description">Exibe o resultado do último concurso da Lotofácil.</string>
-    <string name="_00">00</string>
-    <string name="games_clear_confirm">Excluir?</string>
-    <string name="general_error_title">Erro</string>
-    <string name="checker_incomplete_game_message">Ainda esta incompleto, jovem.</string>
+    <string name="widget_description">Mostra o resultado do último concurso da Lotofácil na sua tela inicial.</string>
+    <string name="widget_ball_placeholder_text">00</string>
+
 </resources>
